# srv

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/pibox/: conn.py  readme.md  setup_pibox.py  srv.py  sync.py  telegram.config  telegram.session  wifi.py
src/pibox/public/: asset-manifest.json  index.html
src/pibox/public/static/js/: main.3b91808f.js  main.3b91808f.js.map  main.79d4915e.js  main.79d4915e.js.map  main.b7b30918.js  main.b7b30918.js.LICENSE.txt  main.b7b30918.js.map
